prevented double borders

--- a/styles/index.css
+++ b/styles/index.css
@@ -67,4 +67,12 @@ h1 {
 #myUL li a {
 	/* add a border to all links */
 	border: 1px solid #ddd;
+	/* prevent double borders */
+	margin-top: -1px;
+	background-color: #f6f6f6;
+	padding: 12px;
+	text-decoration: none;
+	font-size: 18px;
+	color: black;
+	display: block;
 }
